--- a/AlphaFold2.ipynb
+++ b/AlphaFold2.ipynb
@@ -58,11 +58,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "kOblAo-xetgx",
-        "cellView": "form",
-        "outputId": "21f60746-abac-44bc-c232-b505585b7616",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form"
       },
       "source": [
         "#@title Input protein sequence(s), then hit `Runtime` -> `Run all`\n",
@@ -78,13 +74,13 @@
         "def add_hash(x,y):\n",
         "  return x+\"_\"+hashlib.sha1(y.encode()).hexdigest()[:5]\n",
         "\n",
-        "query_sequence = 'RKVCNGIGIGEFKDSLSINATNIKHFKNCTSISGDLHILPVAFRGDSFTHTPPLDPQELDILKTVKEITGFLLIQAWPENRTDLHAFENLEIIRGRTKQHGQFSLAVVSLNITSLGLRSLKEISDGDVIISRNKNLCYANTINWKKLFGTSGQKTKIISNRGENKCKATGQ:QVQLKQSGPGLVQPSQSLSITCTVSGFSLTNYGVHWVRQSPGKGLEWLGVIWSMGNTDYNTPFTSRLSINKDNSKSQVFFKMNSLQSNDTAIYYCARALTYYNFEFAYWGQGTLVTVSAGGGGSGGGGSDILLTQSPVILSVSPGERVSFSCRASQSIGTNIHWYQQRTNGSPRLLIKYASESISGIPSRFSGSGSGTDFTLSINSVESEDIADYYCQQNNNWPTTFGAGTKLELK' #@param {type:\"string\"}\n",
+        "query_sequence = 'PIAQIHILEGRSDEQKETLIREVSEAISRSLDAPLTSVRVIITEMAKGHFGIGGELASK' #@param {type:\"string\"}\n",
         "#@markdown  - Use `:` to specify inter-protein chainbreaks for **modeling complexes** (supports homo- and hetro-oligomers). For example **PI...SK:PI...SK** for a homodimer\n",
         "jobname = 'test' #@param {type:\"string\"}\n",
         "# number of models to use\n",
-        "num_relax = 5 #@param [0, 1, 5] {type:\"raw\"}\n",
+        "num_relax = 0 #@param [0, 1, 5] {type:\"raw\"}\n",
         "#@markdown - specify how many of the top ranked structures to relax using amber\n",
-        "template_mode = \"pdb100\" #@param [\"none\", \"pdb100\",\"custom\"]\n",
+        "template_mode = \"none\" #@param [\"none\", \"pdb100\",\"custom\"]\n",
         "#@markdown - `none` = no template information is used. `pdb100` = detect templates in pdb100 (see [notes](#pdb100)). `custom` - upload and search own templates (PDB or mmCIF format, see [notes](#custom_templates))\n",
         "\n",
         "use_amber = num_relax > 0\n",
@@ -133,18 +129,8 @@
         "print(\"sequence\",query_sequence)\n",
         "print(\"length\",len(query_sequence.replace(\":\",\"\")))"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "jobname test_08b9c\n",
-            "sequence RKVCNGIGIGEFKDSLSINATNIKHFKNCTSISGDLHILPVAFRGDSFTHTPPLDPQELDILKTVKEITGFLLIQAWPENRTDLHAFENLEIIRGRTKQHGQFSLAVVSLNITSLGLRSLKEISDGDVIISRNKNLCYANTINWKKLFGTSGQKTKIISNRGENKCKATGQ:QVQLKQSGPGLVQPSQSLSITCTVSGFSLTNYGVHWVRQSPGKGLEWLGVIWSMGNTDYNTPFTSRLSINKDNSKSQVFFKMNSLQSNDTAIYYCARALTYYNFEFAYWGQGTLVTVSAGGGGSGGGGSDILLTQSPVILSVSPGERVSFSCRASQSIGTNIHWYQQRTNGSPRLLIKYASESISGIPSRFSGSGSGTDFTLSINSVESEDIADYYCQQNNNWPTTFGAGTKLELK\n",
-            "length 407\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -191,26 +177,10 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "AzIKiDiCaHAn",
-        "outputId": "a5e4ce91-fc67-427c-caed-d4ee2d27301e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "AzIKiDiCaHAn"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "installing colabfold...\n",
-            "installing conda...\n",
-            "installing hhsuite and amber...\n",
-            "CPU times: user 436 ms, sys: 76.9 ms, total: 513 ms\n",
-            "Wall time: 1min 56s\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -253,14 +223,14 @@
         "cellView": "form",
         "id": "C2_sh2uAonJH"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#@markdown ### Advanced settings\n",
-        "model_type = \"alphafold2_multimer_v3\" #@param [\"auto\", \"alphafold2_ptm\", \"alphafold2_multimer_v1\", \"alphafold2_multimer_v2\", \"alphafold2_multimer_v3\", \"deepfold_v1\", \"alphafold2\"]\n",
+        "model_type = \"auto\" #@param [\"auto\", \"alphafold2_ptm\", \"alphafold2_multimer_v1\", \"alphafold2_multimer_v2\", \"alphafold2_multimer_v3\", \"deepfold_v1\", \"alphafold2\"]\n",
         "#@markdown - if `auto` selected, will use `alphafold2_ptm` for monomer prediction and `alphafold2_multimer_v3` for complex prediction.\n",
         "#@markdown Any of the mode_types can be used (regardless if input is monomer or complex).\n",
         "num_recycles = \"3\" #@param [\"auto\", \"0\", \"1\", \"3\", \"6\", \"12\", \"24\", \"48\"]\n",
@@ -286,7 +256,7 @@
         "if max_msa == \"auto\": max_msa = None\n",
         "\n",
         "#@markdown #### Save settings\n",
-        "save_all = True #@param {type:\"boolean\"}\n",
+        "save_all = False #@param {type:\"boolean\"}\n",
         "save_recycles = False #@param {type:\"boolean\"}\n",
         "save_to_google_drive = False #@param {type:\"boolean\"}\n",
         "#@markdown -  if the save_to_google_drive option was selected, the result zip will be uploaded to your Google Drive\n",
@@ -310,7 +280,7 @@
         "cellView": "form",
         "id": "ADDuaolKmjGW"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -419,10 +389,10 @@
       "metadata": {
         "cellView": "form",
         "id": "mbaIO9pWjaN0",
-        "outputId": "18e8afd1-3289-4fb5-adc5-3f76c7e43f0f",
+        "outputId": "20060c20-c5af-4e83-dd1e-53b83dddac61",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 663
+          "height": 0
         }
       },
       "execution_count": null,
@@ -501,15 +471,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "e3SI3x9IKpjx"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
